--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "apexcharts": "^3.8.3",
     "axios": "^0.19.0",
     "colormap": "^2.3.1",
-    "core-js": "^2.6.5",
+    "core-js": "^3.6.5",
     "cwise": "^1.0.10",
     "linspace": "^1.0.0",
     "ndarray": "^1.0.18",
@@ -27,18 +27,16 @@
     "zeros": "^1.0.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.9.0",
-    "@vue/cli-plugin-eslint": "^3.9.0",
-    "@vue/cli-service": "^3.9.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "favicons-webpack-plugin": "^1.0.1",
+    "@vue/cli-plugin-babel": "~4.5.8",
+    "@vue/cli-plugin-eslint": "~4.5.8",
+    "@vue/cli-service": "~4.5.8",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
     "sass": "^1.17.4",
     "sass-loader": "^7.1.0",
-    "vue-cli-plugin-vuetify": "^0.6.1",
+    "vue-cli-plugin-vuetify": "~2.0.7",
     "vue-template-compiler": "^2.6.10",
-    "vuetify-loader": "^1.2.2",
-    "yarn-audit-fix": "^3.0.1"
+    "vuetify-loader": "^1.2.2"
   }
 }
